<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_player_one_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:text="@string/player_one_name"
            android:layout_weight="1"
            android:gravity="center_vertical|center" />

        <TextView
            android:id="@+id/tv_player_two_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:text="@string/ai_name"
            android:layout_weight="1"
            android:gravity="center_vertical|center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_player_one_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/score"
            android:layout_weight="1"
            android:gravity="center_vertical|center" />

        <TextView
            android:id="@+id/tv_player_two_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/score"
            android:layout_weight="1"
            android:gravity="center_vertical|center" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_turn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:text="@string/turn_of"
        android:textSize="26sp" />

    <com.mrteapot.dotsandboxes.view.GameView
        android:id="@+id/view_game_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/restart" />


</LinearLayout>